# cyberpunk_mod_manager

./: .gitignore  DESIGN.md  README.en.md  README.md  README.zh.md  config.example.yaml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: README.md  _107_raw.json  _18777_description.txt  _18777_raw.json  _21422_raw.json  _4198_raw.json  _debug_deps_18777.py  _debug_deps_inspect.py  _debug_game_id.py  _dependency_samples_report.json  _inspect_4198_install.py  _nexus_openapi.yaml  _probe_cet_rules.py  _probe_collection_fileid.py  _probe_download.py  _probe_game_gql.py  _probe_gql_notes.py  _probe_mod_details_v3.py  _probe_mod_requirements.py  _probe_v1_user.py  _probe_v3_deps.py  _probe_v3_features.py  _probe_v3_vs_gql.py  _test_collection_parse_flow.py  _verify_18777_deps.py  _verify_deps_sources.py  dependency_extra_samples.py  dependency_samples_regression.py  install_optional_mods.py  probe_collection_html.py  probe_collections_api.py  probe_collections_api2.py  probe_collections_gql.py  probe_collections_gql2.py  probe_collections_gql3.py  probe_collections_gql4.py  probe_collections_gql5.py  probe_collections_gql6.py  probe_mod_870.py  probe_mod_870_download.py  (+2 more)
tests/: conftest.py  test_agent_streaming.py  test_agent_tools.py  test_api.py  test_archives.py  test_audit_ops.py  test_batch_status.py  test_chat_sessions.py  test_cleanup_pending.py  test_collection_api.py  test_collection_install.py  test_collection_url.py  test_concurrency.py  test_config_discovery.py  test_config_save.py  test_config_stable_path.py  (+26 more)
(+114 files in other folders)
